--- a/src/pug/projects.pug
+++ b/src/pug/projects.pug
@@ -35,27 +35,71 @@ html(lang='en')
                             // Project Card 1
                             .card.overflow-hidden.shadow.rounded-4.border-0.mb-5
                                 .card-body.p-0
-                                    .d-flex.align-items-center
                                         .p-5
-                                            h2.fw-bolder Project Name 1
-                                            p Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius at enim eum illum aperiam placeat esse? Mollitia omnis minima saepe recusandae libero, iste ad asperiores! Explicabo commodi quo itaque! Ipsam!
-                                        img.img-fluid(src='https://dummyimage.com/300x400/343a40/6c757d', alt='...')
+                                            h2.fw-bolder Baseball Swing Analysis
+                                            p With yolov7, we track the bat and ball, then do the analysis on data(ex. Bat Speed,Exit Velo)
+                                            .d-flex.align-items-center
+                                                button.btn.btn-primary(type='button', onclick='showVideo()')
+                                                    |  Demo Video
+                                                    
+                                                script.
+                                                    function showVideo() {
+                                                        window.open('./assets/Sports_Baseball_Bs_20240601_V1B1_侯詠章_bat_and ball_analyze.mp4', '_blank', 'width=700,height=400');
+                                                    }
+                                                
+                                                button.btn.btn-primary.ms-3(type='button', onclick='showrepo()')
+                                                    i.bi.bi-github.bi
+                                                    |  Github repo
+                                                    
+                                                script.
+                                                    function showrepo() {
+                                                        window.open('https://github.com/Jar-17/yolov7_for_baseball', '_blank');
+                                                    }
 
                             // Project Card 2
                             .card.overflow-hidden.shadow.rounded-4.border-0
                                 .card-body.p-0
-                                    .d-flex.align-items-center
                                         .p-5
-                                            h2.fw-bolder Project Name 2
-                                            p Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius at enim eum illum aperiam placeat esse? Mollitia omnis minima saepe recusandae libero, iste ad asperiores! Explicabo commodi quo itaque! Ipsam!
-                                        img.img-fluid(src='https://dummyimage.com/300x400/343a40/6c757d', alt='...')
-
-            // Call to action section
-            section.py-5.bg-gradient-primary-to-secondary.text-white
-                .container.px-5.my-5
-                    .text-center
-                        h2.display-4.fw-bolder.mb-4 Let's build something together
-                        a.btn.btn-outline-light.btn-lg.px-5.py-3.fs-6.fw-bolder(href='contact.html') Contact me
+                                            h2.fw-bolder Pitcher Motion Analysis
+                                            p With mediapipe, we track the pitcher's motion ,show the hand path and slow down clips to hightlight the important part in pitching 
+                                            
+                                            h6.fw-bolder Sideview Skeleton Analysis
+                                            p 
+                                            button.btn.btn-primary(type='button', onclick='showVideo1()')
+                                                |  Demo Video
+                                                                
+                                            script.
+                                                function showVideo1() {
+                                                    window.open('./assets/Sports_Baseball_Bs_20240601_V1B1_侯詠章_sideview_skeleton.mp4', '_blank', 'width=700,height=400');
+                                                }
+                                            
+                                            button.btn.btn-primary.ms-3(type='button', onclick='showrepo1()')
+                                                i.bi.bi-github.bi
+                                                |  Github repo
+                                                
+                                            script.
+                                                function showrepo1() {
+                                                    window.open('https://github.com/Jar-17/mediapipe_for_pitcher_motion', '_blank');
+                                                }
+                                            p
+                                            h6.fw-bolder Frontview Release Point Analysis
+                                            p
+                                            button.btn.btn-primary(type='button', onclick='showVideo2()')
+                                                |  Demo Video
+                                                                
+                                            script.
+                                                function showVideo2() {
+                                                    window.open('./assets/Sports_Baseball_Bs_20240601_V1B1_侯詠章_release_point.mp4', '_blank', 'width=700,height=400');
+                                                }
+                                            
+                                            button.btn.btn-primary.ms-3(type='button', onclick='showrepo2()')
+                                                i.bi.bi-github.bi
+                                                |  Github repo
+                                                
+                                            script.
+                                                function showrepo2() {
+                                                    window.open('https://github.com/Jar-17/mediapipe_for_pitcher_motion', '_blank');
+                                                }
 
         // Footer
         include includes/footer.pug
