link video to youtube

--- a/src/pug/projects.pug
+++ b/src/pug/projects.pug
@@ -44,7 +44,7 @@ html(lang='en')
                                                     
                                                 script.
                                                     function showVideo() {
-                                                        window.open('./assets/Sports_Baseball_Bs_20240601_V1B1_侯詠章_bat_and ball_analyze.mp4', '_blank', 'width=700,height=400');
+                                                        window.open('https://youtu.be/xl943erV4E0', '_blank');
                                                     }
                                                 
                                                 button.btn.btn-primary.ms-3(type='button', onclick='showrepo()')
